# Slambot_Charlie

./: .gitignore  LICENSE  README.md
architecture/: hardware_architecture.md  software_architecture.md
config/dds/: fastdds_unicast_discovery.xml
ros2_ws/src/charlie_base_driver/: CMakeLists.txt  package.xml
ros2_ws/src/charlie_base_driver/include/charlie_base_driver/: base_driver_node.hpp  serial_port.hpp
ros2_ws/src/charlie_base_driver/src/: base_driver_node.cpp  serial_port.cpp
ros2_ws/src/charlie_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/charlie_bringup/launch/: bringup.launch.py
ros2_ws/src/charlie_description/: CMakeLists.txt  package.xml
ros2_ws/src/charlie_description/launch/: description.launch.py
ros2_ws/src/charlie_description/urdf/: charlie.urdf.xacro
ros2_ws/src/charlie_imu_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/charlie_imu_driver/charlie_imu_driver/: icm20948_node.py
ros2_ws/src/charlie_imu_driver/launch/: imu.launch.py
ros2_ws/src/charlie_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/charlie_navigation/config/: ekf.yaml  nav2_params.yaml  slam_toolbox.yaml
ros2_ws/src/charlie_navigation/launch/: ekf.launch.py  mapping.launch.py  navigation.launch.py
ros2_ws/src/charlie_web_dashboard/: package.xml  setup.cfg  setup.py
ros2_ws/src/charlie_web_dashboard/charlie_web_dashboard/: api.py  ros_interface.py  web_dashboard_node.py
ros2_ws/src/charlie_web_dashboard/charlie_web_dashboard/static/: costmap_overlay.js  initial_pose.js  main.js  map_render_stability.js  nav_dashboard_extras.js  style.css
ros2_ws/src/charlie_web_dashboard/charlie_web_dashboard/templates/: index.html
ros2_ws/src/charlie_web_dashboard/launch/: web_dashboard_camera.launch.py
scripts/: check_ros2_topic_rates.sh  launch_charlie_nav.sh  launch_charlie_unicast.sh  record_mapping_bag.sh  record_nav_bag.sh  rosbag_launch.sh
teensy_firmware/: platformio.ini
teensy_firmware/archive/: main_old.cpp
teensy_firmware/include/: Motor.h  Odometer.h  Wheel.h  pins.h
teensy_firmware/src/: Motor.cpp  Odometer.cpp  Wheel.cpp  main.cpp
