<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charlie_imu_driver</name>
  <version>0.1.0</version>

  <description>
    Charlie-specific ROS 2 IMU driver for the ICM-20948 over Raspberry Pi I2C.
    Publishes gyro yaw-rate as sensor_msgs/Imu on /imu/data with frame_id imu_link.
  </description>

  <maintainer email="duntondyllon@gmail.com">Dyllon Dunton</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-smbus</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>