<?xml version="1.0"?>
<package format="3">
  <name>charlie_navigation</name>
  <version>0.0.0</version>
  <description>Mapping and navigation configuration for Charlie.</description>
  <maintainer email="duntondyllon@gmail.com">Dyllon Dunton</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>